--- a/petfeeder-vite/index.html
+++ b/petfeeder-vite/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="./public/Pet_feeder.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#0084ff" />
+    <link rel="manifest" href="/manifest.webmanifest" />
     <title>Pet Feeder</title>
   </head>
   <body>
