--- a/petfeeder-vite/index.html
+++ b/petfeeder-vite/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/png" href="./Pet_feeder.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#0084ff" />
-    <link rel="manifest" href="/manifest.webmanifest" />
+    <link rel="manifest" href="./manifest.webmanifest" />
     <title>Pet Feeder</title>
   </head>
   <body>
