--- a/petfeeder-vite/index.html
+++ b/petfeeder-vite/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="./Pet_feeder.png" />
+    <link rel="icon" type="image/png" href="/petfeeder-vite/public/Pet_feeder_cat.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#0084ff" />
     <link rel="manifest" href="./manifest.webmanifest" />
